// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`render with column num 1`] = `
<div>
  <div
    class="nut-grid"
  >
    <div
      class="nut-grid-item"
      style="margin-right: 9px;"
    >
      <div
        class="nut-grid-item-content nut-grid-item-content-border nut-grid-item-content-surround nut-grid-item-content-center nut-grid-item-content-square nut-grid-item-content-vertical"
      >
        <svg
          aria-labelledby="Image"
          class="nut-icon nut-icon-Image "
          role="presentation"
          viewBox="0 0 49 48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M48 18.85V36a8 8 0 0 1-8 8H8a8 8 0 0 1-8-8V8a8 8 0 0 1 8-8h32a8 8 0 0 1 8 8v10.153c.054.226.056.465 0 .696M8 3a5 5 0 0 0-5 5V24.49A16.5 16.5 0 0 1 7 24c3.45 0 6.655 1.06 9.303 2.87C19.627 19.295 27.193 14 36 14c3.212 0 6.26.705 9 1.97V8a5 5 0 0 0-5-5zm2 9a2 2 0 1 1 4 0 2 2 0 0 1-4 0M3 27.602V36a5 5 0 0 0 5 5h32a5 5 0 0 0 5-5V19.333A18.4 18.4 0 0 0 36 17c-8.124 0-15.028 5.237-17.513 12.524a1.499 1.499 0 0 1-2.486.914A13.44 13.44 0 0 0 7 27c-1.395 0-2.738.211-4 .602"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        <div
          class="nut-grid-item-text"
        >
          文本
        </div>
      </div>
    </div>
    <div
      class="nut-grid-item"
      style="margin-right: 9px;"
    >
      <div
        class="nut-grid-item-content nut-grid-item-content-border nut-grid-item-content-surround nut-grid-item-content-center nut-grid-item-content-square nut-grid-item-content-vertical"
      >
        <svg
          aria-labelledby="Image"
          class="nut-icon nut-icon-Image "
          role="presentation"
          viewBox="0 0 49 48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M48 18.85V36a8 8 0 0 1-8 8H8a8 8 0 0 1-8-8V8a8 8 0 0 1 8-8h32a8 8 0 0 1 8 8v10.153c.054.226.056.465 0 .696M8 3a5 5 0 0 0-5 5V24.49A16.5 16.5 0 0 1 7 24c3.45 0 6.655 1.06 9.303 2.87C19.627 19.295 27.193 14 36 14c3.212 0 6.26.705 9 1.97V8a5 5 0 0 0-5-5zm2 9a2 2 0 1 1 4 0 2 2 0 0 1-4 0M3 27.602V36a5 5 0 0 0 5 5h32a5 5 0 0 0 5-5V19.333A18.4 18.4 0 0 0 36 17c-8.124 0-15.028 5.237-17.513 12.524a1.499 1.499 0 0 1-2.486.914A13.44 13.44 0 0 0 7 27c-1.395 0-2.738.211-4 .602"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        <div
          class="nut-grid-item-text"
        >
          文本
        </div>
      </div>
    </div>
    <div
      class="nut-grid-item"
      style=""
    >
      <div
        class="nut-grid-item-content nut-grid-item-content-border nut-grid-item-content-surround nut-grid-item-content-center nut-grid-item-content-square nut-grid-item-content-vertical"
      >
        <svg
          aria-labelledby="Image"
          class="nut-icon nut-icon-Image "
          role="presentation"
          viewBox="0 0 49 48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M48 18.85V36a8 8 0 0 1-8 8H8a8 8 0 0 1-8-8V8a8 8 0 0 1 8-8h32a8 8 0 0 1 8 8v10.153c.054.226.056.465 0 .696M8 3a5 5 0 0 0-5 5V24.49A16.5 16.5 0 0 1 7 24c3.45 0 6.655 1.06 9.303 2.87C19.627 19.295 27.193 14 36 14c3.212 0 6.26.705 9 1.97V8a5 5 0 0 0-5-5zm2 9a2 2 0 1 1 4 0 2 2 0 0 1-4 0M3 27.602V36a5 5 0 0 0 5 5h32a5 5 0 0 0 5-5V19.333A18.4 18.4 0 0 0 36 17c-8.124 0-15.028 5.237-17.513 12.524a1.499 1.499 0 0 1-2.486.914A13.44 13.44 0 0 0 7 27c-1.395 0-2.738.211-4 .602"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        <div
          class="nut-grid-item-text"
        >
          文本
        </div>
      </div>
    </div>
    <div
      class="nut-grid-item"
      style="margin-right: 9px; margin-top: 9px;"
    >
      <div
        class="nut-grid-item-content nut-grid-item-content-border nut-grid-item-content-surround nut-grid-item-content-center nut-grid-item-content-square nut-grid-item-content-vertical"
      >
        <svg
          aria-labelledby="Image"
          class="nut-icon nut-icon-Image "
          role="presentation"
          viewBox="0 0 49 48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M48 18.85V36a8 8 0 0 1-8 8H8a8 8 0 0 1-8-8V8a8 8 0 0 1 8-8h32a8 8 0 0 1 8 8v10.153c.054.226.056.465 0 .696M8 3a5 5 0 0 0-5 5V24.49A16.5 16.5 0 0 1 7 24c3.45 0 6.655 1.06 9.303 2.87C19.627 19.295 27.193 14 36 14c3.212 0 6.26.705 9 1.97V8a5 5 0 0 0-5-5zm2 9a2 2 0 1 1 4 0 2 2 0 0 1-4 0M3 27.602V36a5 5 0 0 0 5 5h32a5 5 0 0 0 5-5V19.333A18.4 18.4 0 0 0 36 17c-8.124 0-15.028 5.237-17.513 12.524a1.499 1.499 0 0 1-2.486.914A13.44 13.44 0 0 0 7 27c-1.395 0-2.738.211-4 .602"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        <div
          class="nut-grid-item-text"
        >
          文本
        </div>
      </div>
    </div>
    <div
      class="nut-grid-item"
      style="margin-right: 9px; margin-top: 9px;"
    >
      <div
        class="nut-grid-item-content nut-grid-item-content-border nut-grid-item-content-surround nut-grid-item-content-center nut-grid-item-content-square nut-grid-item-content-vertical"
      >
        <svg
          aria-labelledby="Image"
          class="nut-icon nut-icon-Image "
          role="presentation"
          viewBox="0 0 49 48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M48 18.85V36a8 8 0 0 1-8 8H8a8 8 0 0 1-8-8V8a8 8 0 0 1 8-8h32a8 8 0 0 1 8 8v10.153c.054.226.056.465 0 .696M8 3a5 5 0 0 0-5 5V24.49A16.5 16.5 0 0 1 7 24c3.45 0 6.655 1.06 9.303 2.87C19.627 19.295 27.193 14 36 14c3.212 0 6.26.705 9 1.97V8a5 5 0 0 0-5-5zm2 9a2 2 0 1 1 4 0 2 2 0 0 1-4 0M3 27.602V36a5 5 0 0 0 5 5h32a5 5 0 0 0 5-5V19.333A18.4 18.4 0 0 0 36 17c-8.124 0-15.028 5.237-17.513 12.524a1.499 1.499 0 0 1-2.486.914A13.44 13.44 0 0 0 7 27c-1.395 0-2.738.211-4 .602"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        <div
          class="nut-grid-item-text"
        >
          文本
        </div>
      </div>
    </div>
    <div
      class="nut-grid-item"
      style="margin-top: 9px;"
    >
      <div
        class="nut-grid-item-content nut-grid-item-content-border nut-grid-item-content-surround nut-grid-item-content-center nut-grid-item-content-square nut-grid-item-content-vertical"
      >
        <svg
          aria-labelledby="Image"
          class="nut-icon nut-icon-Image "
          role="presentation"
          viewBox="0 0 49 48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M48 18.85V36a8 8 0 0 1-8 8H8a8 8 0 0 1-8-8V8a8 8 0 0 1 8-8h32a8 8 0 0 1 8 8v10.153c.054.226.056.465 0 .696M8 3a5 5 0 0 0-5 5V24.49A16.5 16.5 0 0 1 7 24c3.45 0 6.655 1.06 9.303 2.87C19.627 19.295 27.193 14 36 14c3.212 0 6.26.705 9 1.97V8a5 5 0 0 0-5-5zm2 9a2 2 0 1 1 4 0 2 2 0 0 1-4 0M3 27.602V36a5 5 0 0 0 5 5h32a5 5 0 0 0 5-5V19.333A18.4 18.4 0 0 0 36 17c-8.124 0-15.028 5.237-17.513 12.524a1.499 1.499 0 0 1-2.486.914A13.44 13.44 0 0 0 7 27c-1.395 0-2.738.211-4 .602"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        <div
          class="nut-grid-item-text"
        >
          文本
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render with custom content 1`] = `
<div>
  <div
    class="nut-grid"
  >
    <div
      class="nut-grid-item"
      style="margin-right: 9px;"
    >
      <div
        class="nut-grid-item-content nut-grid-item-content-border nut-grid-item-content-surround nut-grid-item-content-center nut-grid-item-content-square nut-grid-item-content-horizontal"
      >
        <svg
          aria-labelledby="Image"
          class="nut-icon nut-icon-Image "
          role="presentation"
          viewBox="0 0 49 48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M48 18.85V36a8 8 0 0 1-8 8H8a8 8 0 0 1-8-8V8a8 8 0 0 1 8-8h32a8 8 0 0 1 8 8v10.153c.054.226.056.465 0 .696M8 3a5 5 0 0 0-5 5V24.49A16.5 16.5 0 0 1 7 24c3.45 0 6.655 1.06 9.303 2.87C19.627 19.295 27.193 14 36 14c3.212 0 6.26.705 9 1.97V8a5 5 0 0 0-5-5zm2 9a2 2 0 1 1 4 0 2 2 0 0 1-4 0M3 27.602V36a5 5 0 0 0 5 5h32a5 5 0 0 0 5-5V19.333A18.4 18.4 0 0 0 36 17c-8.124 0-15.028 5.237-17.513 12.524a1.499 1.499 0 0 1-2.486.914A13.44 13.44 0 0 0 7 27c-1.395 0-2.738.211-4 .602"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        <div
          class="nut-grid-item-text nut-grid-item-text-horizontal"
        >
          <span>
            More
          </span>
        </div>
      </div>
    </div>
    <div
      class="nut-grid-item"
      style="margin-right: 9px;"
    >
      <div
        class="nut-grid-item-content nut-grid-item-content-border nut-grid-item-content-surround nut-grid-item-content-center nut-grid-item-content-square nut-grid-item-content-horizontal"
      >
        <div
          class="nut-grid-item-text nut-grid-item-text-horizontal"
        >
          <div
            class="nut-avatar nut-avatar-normal nut-avatar-round nut-avatar-normal-round demo-avatar"
            style="background-color: #FF0F23; color: #666;"
          >
            <svg
              aria-labelledby="Image"
              class="nut-icon nut-icon-Image  nut-avatar-icon"
              color="#fff"
              role="presentation"
              style="color: #fff;"
              viewBox="0 0 49 48"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M48 18.85V36a8 8 0 0 1-8 8H8a8 8 0 0 1-8-8V8a8 8 0 0 1 8-8h32a8 8 0 0 1 8 8v10.153c.054.226.056.465 0 .696M8 3a5 5 0 0 0-5 5V24.49A16.5 16.5 0 0 1 7 24c3.45 0 6.655 1.06 9.303 2.87C19.627 19.295 27.193 14 36 14c3.212 0 6.26.705 9 1.97V8a5 5 0 0 0-5-5zm2 9a2 2 0 1 1 4 0 2 2 0 0 1-4 0M3 27.602V36a5 5 0 0 0 5 5h32a5 5 0 0 0 5-5V19.333A18.4 18.4 0 0 0 36 17c-8.124 0-15.028 5.237-17.513 12.524a1.499 1.499 0 0 1-2.486.914A13.44 13.44 0 0 0 7 27c-1.395 0-2.738.211-4 .602"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="nut-grid-item"
      style="margin-right: 9px;"
    >
      <div
        class="nut-grid-item-content nut-grid-item-content-border nut-grid-item-content-surround nut-grid-item-content-center nut-grid-item-content-square nut-grid-item-content-horizontal"
      >
        <div
          class="nut-avatar nut-avatar-normal nut-avatar-round nut-avatar-normal-round demo-avatar"
          style="background-color: #FF0F23; color: #666;"
        >
          <svg
            aria-labelledby="Image"
            class="nut-icon nut-icon-Image  nut-avatar-icon"
            color="#fff"
            role="presentation"
            style="color: #fff;"
            viewBox="0 0 49 48"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M48 18.85V36a8 8 0 0 1-8 8H8a8 8 0 0 1-8-8V8a8 8 0 0 1 8-8h32a8 8 0 0 1 8 8v10.153c.054.226.056.465 0 .696M8 3a5 5 0 0 0-5 5V24.49A16.5 16.5 0 0 1 7 24c3.45 0 6.655 1.06 9.303 2.87C19.627 19.295 27.193 14 36 14c3.212 0 6.26.705 9 1.97V8a5 5 0 0 0-5-5zm2 9a2 2 0 1 1 4 0 2 2 0 0 1-4 0M3 27.602V36a5 5 0 0 0 5 5h32a5 5 0 0 0 5-5V19.333A18.4 18.4 0 0 0 36 17c-8.124 0-15.028 5.237-17.513 12.524a1.499 1.499 0 0 1-2.486.914A13.44 13.44 0 0 0 7 27c-1.395 0-2.738.211-4 .602"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="nut-grid-item"
      style=""
    >
      <div
        class="nut-grid-item-content nut-grid-item-content-border nut-grid-item-content-surround nut-grid-item-content-center nut-grid-item-content-square nut-grid-item-content-horizontal"
      >
        <div
          class="nut-avatar nut-avatar-large nut-avatar-round nut-avatar-large-round"
          style="background-color: #eee; color: #666;"
        >
          <div
            class="nut-image  nut-avatar-icon"
          >
            <img
              alt=""
              class="nut-image-default"
              src="https://img12.360buyimg.com/imagetools/jfs/t1/143702/31/16654/116794/5fc6f541Edebf8a57/4138097748889987.png"
              style="object-fit: fill; object-position: center;"
            />
            <div
              class="nut-image-loading"
            >
              <svg
                aria-labelledby="Image"
                class="nut-icon nut-icon-Image "
                role="presentation"
                viewBox="0 0 49 48"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M48 18.85V36a8 8 0 0 1-8 8H8a8 8 0 0 1-8-8V8a8 8 0 0 1 8-8h32a8 8 0 0 1 8 8v10.153c.054.226.056.465 0 .696M8 3a5 5 0 0 0-5 5V24.49A16.5 16.5 0 0 1 7 24c3.45 0 6.655 1.06 9.303 2.87C19.627 19.295 27.193 14 36 14c3.212 0 6.26.705 9 1.97V8a5 5 0 0 0-5-5zm2 9a2 2 0 1 1 4 0 2 2 0 0 1-4 0M3 27.602V36a5 5 0 0 0 5 5h32a5 5 0 0 0 5-5V19.333A18.4 18.4 0 0 0 36 17c-8.124 0-15.028 5.237-17.513 12.524a1.499 1.499 0 0 1-2.486.914A13.44 13.44 0 0 0 7 27c-1.395 0-2.738.211-4 .602"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should match snapshot 1`] = `
<div>
  <div
    class="nut-grid"
  >
    <div
      class="nut-grid-item"
      style="margin-right: 9px;"
    >
      <div
        class="nut-grid-item-content nut-grid-item-content-border nut-grid-item-content-surround nut-grid-item-content-center nut-grid-item-content-square nut-grid-item-content-vertical"
      >
        <svg
          aria-labelledby="Image"
          class="nut-icon nut-icon-Image "
          role="presentation"
          viewBox="0 0 49 48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M48 18.85V36a8 8 0 0 1-8 8H8a8 8 0 0 1-8-8V8a8 8 0 0 1 8-8h32a8 8 0 0 1 8 8v10.153c.054.226.056.465 0 .696M8 3a5 5 0 0 0-5 5V24.49A16.5 16.5 0 0 1 7 24c3.45 0 6.655 1.06 9.303 2.87C19.627 19.295 27.193 14 36 14c3.212 0 6.26.705 9 1.97V8a5 5 0 0 0-5-5zm2 9a2 2 0 1 1 4 0 2 2 0 0 1-4 0M3 27.602V36a5 5 0 0 0 5 5h32a5 5 0 0 0 5-5V19.333A18.4 18.4 0 0 0 36 17c-8.124 0-15.028 5.237-17.513 12.524a1.499 1.499 0 0 1-2.486.914A13.44 13.44 0 0 0 7 27c-1.395 0-2.738.211-4 .602"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        <div
          class="nut-grid-item-text"
        >
          文本
        </div>
      </div>
    </div>
    <div
      class="nut-grid-item"
      style="margin-right: 9px;"
    >
      <div
        class="nut-grid-item-content nut-grid-item-content-border nut-grid-item-content-surround nut-grid-item-content-center nut-grid-item-content-square nut-grid-item-content-vertical"
      >
        <svg
          aria-labelledby="Image"
          class="nut-icon nut-icon-Image "
          role="presentation"
          viewBox="0 0 49 48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M48 18.85V36a8 8 0 0 1-8 8H8a8 8 0 0 1-8-8V8a8 8 0 0 1 8-8h32a8 8 0 0 1 8 8v10.153c.054.226.056.465 0 .696M8 3a5 5 0 0 0-5 5V24.49A16.5 16.5 0 0 1 7 24c3.45 0 6.655 1.06 9.303 2.87C19.627 19.295 27.193 14 36 14c3.212 0 6.26.705 9 1.97V8a5 5 0 0 0-5-5zm2 9a2 2 0 1 1 4 0 2 2 0 0 1-4 0M3 27.602V36a5 5 0 0 0 5 5h32a5 5 0 0 0 5-5V19.333A18.4 18.4 0 0 0 36 17c-8.124 0-15.028 5.237-17.513 12.524a1.499 1.499 0 0 1-2.486.914A13.44 13.44 0 0 0 7 27c-1.395 0-2.738.211-4 .602"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        <div
          class="nut-grid-item-text"
        >
          文本
        </div>
      </div>
    </div>
    <div
      class="nut-grid-item"
      style="margin-right: 9px;"
    >
      <div
        class="nut-grid-item-content nut-grid-item-content-border nut-grid-item-content-surround nut-grid-item-content-center nut-grid-item-content-square nut-grid-item-content-vertical"
      >
        <svg
          aria-labelledby="Image"
          class="nut-icon nut-icon-Image "
          role="presentation"
          viewBox="0 0 49 48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M48 18.85V36a8 8 0 0 1-8 8H8a8 8 0 0 1-8-8V8a8 8 0 0 1 8-8h32a8 8 0 0 1 8 8v10.153c.054.226.056.465 0 .696M8 3a5 5 0 0 0-5 5V24.49A16.5 16.5 0 0 1 7 24c3.45 0 6.655 1.06 9.303 2.87C19.627 19.295 27.193 14 36 14c3.212 0 6.26.705 9 1.97V8a5 5 0 0 0-5-5zm2 9a2 2 0 1 1 4 0 2 2 0 0 1-4 0M3 27.602V36a5 5 0 0 0 5 5h32a5 5 0 0 0 5-5V19.333A18.4 18.4 0 0 0 36 17c-8.124 0-15.028 5.237-17.513 12.524a1.499 1.499 0 0 1-2.486.914A13.44 13.44 0 0 0 7 27c-1.395 0-2.738.211-4 .602"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        <div
          class="nut-grid-item-text"
        >
          文本
        </div>
      </div>
    </div>
  </div>
</div>
`;
